# sim_exhausitive_3PG_game

./: .gitignore  README.md  filter_out_allD.rb  filter_out_efficiency.rb  graph.rb  strategy.py  strategy.rb  strategy_enumerator.rb  test_risky_loop.py  visualize.py
cpp/: CMakeLists.txt  Game.cpp  Game.hpp  GameM3.cpp  GameM3Test.cpp  Strategy.cpp  Strategy.hpp  StrategyM3.cpp  StrategyM3.hpp  job384.sh  job_defense768.sh  k_build.sh  main.cpp  pgg3.c  strategy.py  strategyM3Test.cpp
results/m2/result_defensible_efficiency_0.001/: efficiency_gt_0.05
results/m2/result_defensible_efficiency_0.001_distinguishable/: strategies
results/m3/result_defensible_efficiency_0.001_distinguishable_m3/: m3_strategies
ruby/: find_common_actions.rb  find_common_graph.rb  graph.rb  strategy_m3.rb
ruby/lib/: graph.rb  state.rb  state_m3.rb  strategy.rb  strategy_m3.rb
step1/: filter_out_allD.rb  find_common_actions.rb  find_common_graph.rb  graph.rb  run_defensibility_check.sh  state.rb  state_m3.rb  strategy.rb  strategy_enumerator.rb  strategy_m3.rb  visualize_graph.rb
step1_result_split/: .gitignore  run_split.rb
step2/: filter_out_efficiency.rb
step3/: CMakeLists.txt  Game.cpp  Game.hpp  GameM3.cpp  GameM3.hpp  GameM3Test.cpp  GameTest.cpp  Graph.cpp  Graph.hpp  GraphTest.cpp  Strategy.cpp  Strategy.hpp  StrategyM3.cpp  StrategyTest.cpp  job384.sh  job_efficiency768.sh  k_build.sh  main.cpp  main_defense1.cpp  main_efficiency.cpp  main_m3_efficiency.cpp  mpi_main.cpp  strategy.cpp  strategy.hpp  strategyM3Test.cpp  test.cpp  test_input.txt
step4/: strategy.py  test_risky_loop.py  visualize.py
